# flowdeck

./: .gitignore  ARCHITECTURE.md  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/flowdeck/: __init__.py  auth.py  config.py  db.py  mapping.py  seed.py  server.py  service.py
apps/api/tests/: conftest.py  test_auth.py  test_integration_postgres.py  test_service.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
proto/: buf.gen.yaml  flow.proto
