[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowdeck-api"
version = "0.1.0"
description = "FlowDeck gRPC backend"
requires-python = ">=3.12"
dependencies = [
  "grpcio==1.66.2",
  "grpcio-reflection==1.66.2",
  "grpcio-tools==1.66.2",
  "protobuf>=5.27,<6",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyjwt>=2.8",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "testcontainers[postgres]>=4.5",
  "ruff>=0.5.0",
  "black>=24.4",
]

[project.scripts]
flowdeck-api = "flowdeck.server:main"
flowdeck-seed = "flowdeck.seed:main"

[tool.setuptools.packages.find]
include = ["flowdeck*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"flowdeck/gen/*" = ["ALL"]
"tests/*" = ["N802", "N806"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "flowdeck/gen"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]
